--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,5 +1,5 @@
-# MySQL.  Versions 4.1 and 5.0 are recommended.
-# 
+# MySQL.  Versions 5.0+ are recommended.
+#
 # Install the MYSQL driver
 #   gem install mysql2
 #
@@ -8,35 +8,46 @@
 #
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
-development:
+#
+default: &default
   adapter: mysql2
   encoding: utf8
-  reconnect: false
-  database: sulbib_development
   pool: 5
   username: root
   password:
-  socket: /tmp/mysql.sock
+
+development:
+  <<: *default
+  database: sulbib_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
+  <<: *default
   database: sulbib_test
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
 
+# As with config/secrets.yml, you never want to store sensitive information,
+# like your database password, in your source code. If your source code is
+# ever seen by anyone, they now have access to your database.
+#
+# Instead, provide the password as a unix environment variable when you boot
+# the app. Read http://guides.rubyonrails.org/configuring.html#configuring-a-database
+# for a full rundown on how to provide these environment variables in a
+# production deployment.
+#
+# On Heroku and other platform providers, you may have a full connection URL
+# available as an environment variable. For example:
+#
+#   DATABASE_URL="mysql2://myuser:mypass@localhost/somedatabase"
+#
+# You can use this database configuration with:
+#
+#   production:
+#     url: <%= ENV['DATABASE_URL'] %>
+#
 production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: cap
-  pool: 5
-  username: cap
-  password: 
-  socket: /var/lib/mysql/mysql.sock
+  <<: *default
+  database: sulbib_production
+  username: sulbib
+  password: <%= ENV['MYSQL_DATABASE_PASSWORD'] %>
