--- a/fixtures/vcr_cassettes/ScienceWireClient/_get_pub_by_doi/returns_an_array_with_one_pubhash.yml
+++ b/fixtures/vcr_cassettes/ScienceWireClient/_get_pub_by_doi/returns_an_array_with_one_pubhash.yml
@@ -4,19 +4,33 @@ http_interactions:
     method: post
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
-        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery>      <![CDATA[\n
-        \     <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n
-        \         <Criterion>\n              <Criteria>\n                  <Criterion>\n
-        \                     <Filter>\n                          <Column>DOI</Column>\n
-        \                         <Operator>Equals</Operator>\n                          <Value>10.1111/j.1444-0938.2010.00524.x</Value>\n
-        \                     </Filter>\n                  </Criterion>\n              </Criteria>\n
-        \         </Criterion>\n          <MaximumRows>200</MaximumRows>\n      </query>\n
-        \     ]]>\n</xmlQuery>\n      </ScienceWireQueryXMLParameter>"
+      encoding: UTF-8
+      string: |-
+        <?xml version="1.0"?>
+              <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+              <xmlQuery>      <![CDATA[
+              <query xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                  <Criterion>
+                      <Criteria>
+                          <Criterion>
+                              <Filter>
+                                  <Column>DOI</Column>
+                                  <Operator>Equals</Operator>
+                                  <Value>10.1111/j.1444-0938.2010.00524.x</Value>
+                              </Filter>
+                          </Criterion>
+                      </Criteria>
+                  </Criterion>
+                  <MaximumRows>200</MaximumRows>
+              </query>
+              ]]>
+        </xmlQuery>
+              </ScienceWireQueryXMLParameter>
     headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - ! '*/*'
+      - "*/*"
       User-Agent:
       - Ruby
       Licenseid:
@@ -47,16 +61,16 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 07 Mar 2016 22:18:21 GMT
+      - Tue, 05 Apr 2016 23:36:14 GMT
       Content-Length:
       - '278'
     body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: UTF-8
+      string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>142611</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Mon, 07 Mar 2016 22:18:21 GMT
+  recorded_at: Tue, 05 Apr 2016 23:36:15 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/142611?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -64,8 +78,10 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
-      - ! '*/*'
+      - "*/*"
       User-Agent:
       - Ruby
       Content-Type:
@@ -94,12 +110,12 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 07 Mar 2016 22:18:21 GMT
+      - Tue, 05 Apr 2016 23:36:16 GMT
       Content-Length:
       - '4067'
     body:
-      encoding: US-ASCII
-      string: ! "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
+      encoding: UTF-8
+      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <PublicationItem>\r\n
         \   <PublicationItemID>37929883</PublicationItemID>\r\n    <Title>An international
         survey of contact lens prescribing for presbyopia</Title>\r\n    <Abstract>Purpose:
@@ -147,5 +163,5 @@ http_interactions:
         \   <CopyrightStateProvince>NJ</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Mon, 07 Mar 2016 22:18:21 GMT
-recorded_with: VCR 2.9.3
+  recorded_at: Tue, 05 Apr 2016 23:36:16 GMT
+recorded_with: VCR 3.0.1
