--- a/config/settings.yml
+++ b/config/settings.yml
@@ -3,6 +3,7 @@ API_KEY: ***REMOVED***
 ## Settings for URI identifier prefixes used in the data; they should be working values in production
 SULPUB_ID:
   PUB_URI: http://sulcap.stanford.edu/publications
+  AUTHOR_URI: http://sulcap.stanford.edu/authors
   AUTHORSHIP_URI: http://sulcap.stanford.edu/authorship
   SEARCHWORKS_URI: http://searchworks.stanford.edu/?search_field=advanced&number=
 
