--- a/fixtures/vcr_cassettes/ScienceWireClient/_query_sciencewire_by_author_name/with_uncommon_last_name_first_name_and_max_rows_4/returns_an_empty_array.yml
+++ b/fixtures/vcr_cassettes/ScienceWireClient/_query_sciencewire_by_author_name/with_uncommon_last_name_first_name_and_max_rows_4/returns_an_empty_array.yml
@@ -10,9 +10,9 @@ http_interactions:
         \                        <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
         xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n              <Criterion>\n
         \               <Criteria>\n                              <Criterion>\n              <TextSearch>\n
-        \               <QueryPredicate>\"ottawa,yukon\" or \"OTTAWA,Y\" or \"4\"</QueryPredicate>\n
+        \               <QueryPredicate>(\"ottawa,yukon\" or \"OTTAWA,Y\") and \"stanford\"</QueryPredicate>\n
         \               <SearchType>ExactMatch</SearchType>\n                <Columns>AggregateText</Columns>\n
-        \               <MaximumRows>200</MaximumRows>\n              </TextSearch>\n
+        \               <MaximumRows>4</MaximumRows>\n              </TextSearch>\n
         \           </Criterion>\n\n                                <Criterion>\n
         \               <Filter>\n                  <Column>AuthorLastName</Column>\n
         \                 <Operator>BeginsWith</Operator>\n                  <Value>OTTAWA</Value>\n
@@ -27,7 +27,7 @@ http_interactions:
         \             </Filter>\n            </Criterion>\n\n                </Criteria>\n
         \             </Criterion>\n                          <Columns>\n              <SortColumn>\n
         \               <Column>Rank</Column>\n                <Direction>Descending</Direction>\n
-        \             </SortColumn>\n            </Columns>\n\n              <MaximumRows>200</MaximumRows>\n
+        \             </SortColumn>\n            </Columns>\n\n              <MaximumRows>4</MaximumRows>\n
         \           </query>\n\n            ]]>\n</xmlQuery>\n      </ScienceWireQueryXMLParameter>"
     headers:
       User-Agent:
@@ -37,7 +37,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 04 May 2016 00:49:22 GMT
+      - Fri, 06 May 2016 20:20:31 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -66,19 +66,19 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 04 May 2016 00:49:22 GMT
+      - Fri, 06 May 2016 20:20:33 GMT
       Content-Length:
       - '278'
     body:
       encoding: UTF-8
       string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>240513</queryID>\r\n
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>240714</queryID>\r\n
         \ <queryResultRows>0</queryResultRows>\r\n  <totalRows>0</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Wed, 04 May 2016 00:49:22 GMT
+  recorded_at: Fri, 06 May 2016 20:20:33 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/240513?format=xml&page=0&pageSize=2147483647&v=version/4
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/240714?format=xml&page=0&pageSize=2147483647&v=version/4
     body:
       encoding: UTF-8
       string: ''
@@ -90,7 +90,7 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Wed, 04 May 2016 00:49:22 GMT
+      - Fri, 06 May 2016 20:20:33 GMT
       Licenseid:
       - Settings.SCIENCEWIRE.LICENSE_ID
       Host:
@@ -119,7 +119,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Wed, 04 May 2016 00:49:22 GMT
+      - Fri, 06 May 2016 20:20:33 GMT
       Content-Length:
       - '148'
     body:
@@ -127,5 +127,5 @@ http_interactions:
       string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" />"
     http_version: 
-  recorded_at: Wed, 04 May 2016 00:49:23 GMT
+  recorded_at: Fri, 06 May 2016 20:20:33 GMT
 recorded_with: VCR 3.0.1
