--- a/config/settings.yml
+++ b/config/settings.yml
@@ -18,6 +18,7 @@ CAP:
   AUTHORSHIP_API_LOG: log/cap_authorship_api.log
   PROFILE_ID_REWRITE_LOG: log/cap_profile_id_rewrite.log
   CONTRIBUTIONS_LOG: log/contributions.log
+  CONTRIBUTIONS_PUBLICATIONS_ERRORS_LOG: log/contributions_publications_errors.log
   PORT: 443
   TOKEN_PASS: something
   TOKEN_PATH: /oauth/token
